<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/texture1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".QueueQuestion" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_queue1"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="3"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/rdoGroupQueue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/rdoQueue1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue1_a"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/rdoQueue2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue1_b"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/rdoQueue3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue1_c"
                    android:textSize="30sp" />

                <RadioButton
                    android:id="@+id/rdoQueue4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/queue1_d"
                    android:textSize="30sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/btnQuestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgNext"
                android:src="@drawable/next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>